feat: Add validation for car input